--- a/CSS/main.css
+++ b/CSS/main.css
@@ -17,8 +17,8 @@ input {
 }
 
 .header-div {
-  width: 100%;
-  height: 621px;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
